Rename: CouponInput to CouponRequest
