# coupons-apirest/src/main/java/org/mperez/coupons/rest/api/CouponApi.java
@@ -5,7 +5,7 @@
  */
 package org.mperez.coupons.rest.api;
 
-import org.mperez.coupons.rest.model.CouponInput;
+import org.mperez.coupons.rest.model.CouponRequest;
 import org.mperez.coupons.rest.model.CouponResponse;
 import org.mperez.coupons.rest.model.Response;
 import org.springframework.http.ResponseEntity;
@@ -31,7 +31,7 @@ public interface CouponApi {
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    ResponseEntity<CouponResponse> getRecomendedItemsForCoupon(@ApiParam(value = "Cupon disponible. Contiene todos los items favoritos del Usuario y el monto maximo que puede gastar."  )  @RequestBody CouponInput body
+    ResponseEntity<CouponResponse> getRecomendedItemsForCoupon(@ApiParam(value = "Cupon disponible. Contiene todos los items favoritos del Usuario y el monto maximo que puede gastar."  )  @RequestBody CouponRequest body
 );
 
 }
